--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,7 +13,6 @@
     </data>
 
 
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -26,6 +25,11 @@
             app:defaultNavHost="true"
             app:navGraph="@navigation/nav_graph_signin"
             tools:layout="@layout/fragment_sign_in" />
+
+        <include
+            layout="@layout/custom_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </FrameLayout>
 </layout>
