--- a/app/src/main/res/navigation/nav_graph_signin.xml
+++ b/app/src/main/res/navigation/nav_graph_signin.xml
@@ -8,7 +8,42 @@
     <fragment
         android:id="@+id/signInFragment"
         android:name="com.example.testjetpack.ui.signin.signin.SignInFragment"
-        android:label="fragment_sign_in"
-        tools:layout="@layout/fragment_sign_in" />
+        android:label=""
+        app:launchSingleTop="true"
+        tools:layout="@layout/fragment_sign_in">
+        <action
+            android:id="@+id/action_signInFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment"
+            app:enterAnim="@anim/enter_from_right"
+            app:exitAnim="@anim/exit_to_left"
+            app:popEnterAnim="@anim/enter_from_left"
+            app:popExitAnim="@anim/exit_to_right" />
+        <action
+            android:id="@+id/action_signInFragment_to_passwordRecoveryFragment"
+            app:destination="@id/passwordRecoveryFragment"
+            app:enterAnim="@anim/enter_from_right"
+            app:exitAnim="@anim/exit_to_left"
+            app:popEnterAnim="@anim/enter_from_left"
+            app:popExitAnim="@anim/exit_to_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="com.example.testjetpack.ui.signin.signup.SignUpFragment"
+        android:label=""
+        tools:layout="@layout/fragment_sign_up">
+        <action
+            android:id="@+id/action_popupTo_signInFragment"
+            app:popUpTo="@id/signInFragment"
+            app:popUpToInclusive="false" />
+    </fragment>
+    <fragment
+        android:id="@+id/passwordRecoveryFragment"
+        android:name="com.example.testjetpack.ui.signin.passwordrecovery.PasswordRecoveryFragment"
+        tools:layout="@layout/fragment_password_recovery">
+        <action
+            android:id="@+id/action_popupTo_signInFragment"
+            app:popUpTo="@id/signInFragment"
+            app:popUpToInclusive="false" />
+    </fragment>
 
 </navigation>
