--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,6 +66,11 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="DefaultTextStyle">
+        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="ButtonStyle" parent="Widget.AppCompat.Button.Colored">
         <!--<item name="android:stateListAnimator">@animator/button_animator</item>-->
         <!--<item name="android:outlineAmbientShadowColor">@color/colorButton</item>-->
