--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/sign_in_logo_height"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/ic_star" />
+                android:src="@drawable/ic_logo" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lEmail"
