added SignUp, SignIn, PasswordRecovery updated with material

--- a/app/src/main/res/layout/fragment_gitreposearch.xml
+++ b/app/src/main/res/layout/fragment_gitreposearch.xml
@@ -43,9 +43,9 @@
             android:text='@={viewModel.searchText}'
             app:onEditorActionListener='@{viewModel.onOk}' />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/bSearch"
-            style="@style/ButtonStyle"
+            style="@style/DefaultButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/toolbarPlaceHolder"
