--- a/app/src/main/res/layout/fragment_message_dialog.xml
+++ b/app/src/main/res/layout/fragment_message_dialog.xml
@@ -81,7 +81,7 @@
 
             <Button
                 android:id="@+id/bAction1"
-                style="@style/ButtonStyle"
+                style="@style/DefaultButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
@@ -91,7 +91,7 @@
 
             <Button
                 android:id="@+id/bAction2"
-                style="@style/ButtonStyle"
+                style="@style/DefaultButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
