--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -32,24 +32,24 @@
             <TextView
                 android:id="@+id/tvHeader"
                 style="@style/HeaderText"
-                android:textAllCaps="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/icon"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:gravity="center"
                 android:text="@string/sign_up"
-                android:layout_below="@id/icon"/>
+                android:textAllCaps="true" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lName"
+                style="@style/TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvHeader">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etName"
-                    style="@style/DefaultTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/name"
@@ -58,19 +58,19 @@
                     android:maxLines="1"
                     android:singleLine="true"
                     android:text='@={viewModel.name}'
-                    app:error='@{viewModel.nameError}'/>
+                    app:error='@{viewModel.nameError}' />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lEmail"
+                style="@style/TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lName">
 
-                <AutoCompleteTextView
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/actvEmail"
-                    style="@style/DefaultTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
@@ -79,12 +79,13 @@
                     android:maxLines="1"
                     android:singleLine="true"
                     android:text='@={viewModel.email}'
-                    app:error='@{viewModel.emailError}'/>
+                    app:error='@{viewModel.emailError}' />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lPassword"
+                style="@style/TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lEmail"
@@ -101,12 +102,13 @@
                     android:maxLines="1"
                     android:singleLine="true"
                     android:text='@={viewModel.password}'
-                    app:error='@{viewModel.passwordError}'/>
+                    app:error='@{viewModel.passwordError}' />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lConfirmPassword"
+                style="@style/TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lPassword"
@@ -123,7 +125,7 @@
                     android:maxLines="1"
                     android:singleLine="true"
                     android:text='@={viewModel.passwordConfirm}'
-                    app:error='@{viewModel.confirmPasswordError}'/>
+                    app:error='@{viewModel.confirmPasswordError}' />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -142,27 +144,30 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:text="@string/i_accept_the_terms_withstar"
-                    app:error='@{viewModel.termsAcceptanceError}'/>
+                    app:error='@{viewModel.termsAcceptanceError}' />
 
-                <CheckBox
+                <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/cbTerms"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:checked='@={viewModel.termsAccepted}'/>
+                    android:translationX="22dp"
+                    android:checked='@={viewModel.termsAccepted}'
+                    app:useMaterialThemeColors="true" />
 
             </RelativeLayout>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bRegister"
-                style="@style/ButtonStyle"
+                style="@style/MaterialButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/termContainer"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:text="@string/register"
-                android:layout_below="@id/termContainer"
-                app:onClick='@{viewModel::register}'/>
+                app:cornerRadius="16dp"
+                app:onClick='@{viewModel::register}' />
 
         </RelativeLayout>
 
