--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -188,7 +188,7 @@
                     android:layout_toStartOf="@id/ibEmailAddEdit"
                     android:layout_toEndOf="@id/ivEmailPicture"
                     android:hint="@string/hint_email"
-                    app:hintTextAppearance="@style/HintStyle">
+                    app:hintTextAppearance="@style/HintText">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etEmailAddress"
@@ -242,7 +242,7 @@
                     android:layout_toStartOf="@id/ibEmailAddEdit"
                     android:layout_toEndOf="@id/ivEmailPicture"
                     android:hint="@string/hint_phone"
-                    app:hintTextAppearance="@style/HintStyle">
+                    app:hintTextAppearance="@style/HintText">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etPhoneNumber"
@@ -341,7 +341,7 @@
 
             <Button
                 android:id="@+id/bCardAddEdit"
-                style="@style/ButtonStyle"
+                style="@style/DefaultButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="48dp"
