--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -44,33 +44,33 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/lEmail"
+                style="@style/TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tvHeader">
+                android:layout_below="@id/tvHeader"
+                android:hint="@string/email">
 
-                <AutoCompleteTextView
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/actvEmail"
-                    style="@style/DefaultTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/email"
                     android:imeOptions="actionDone"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:singleLine="true"
                     android:text='@={viewModel.email}'
                     app:error='@{viewModel.emailError}'/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bSendEmail"
-                style="@style/ButtonStyle"
+                style="@style/MaterialButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:text="@string/send_email"
                 android:layout_below="@id/lEmail"
+                app:cornerRadius="16dp"
                 app:onClick='@{viewModel::recover}'/>
 
         </RelativeLayout>
