--- a/app/src/main/res/layout/item_network_state.xml
+++ b/app/src/main/res/layout/item_network_state.xml
@@ -37,7 +37,7 @@
 
         <Button
             android:id="@+id/retry_button"
-            style="@style/ButtonStyle"
+            style="@style/DefaultButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
