--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,9 +30,13 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
+    <style name="AppTheme.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -45,7 +49,14 @@
         <item name="titleTextColor">@color/colorBackgroundPrimary</item>
     </style>
 
-    <style name="HintStyle" parent="TextAppearance.Design.Hint">
+
+    <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="hintTextAppearance">@style/HintText</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
+
+    <style name="HintText" parent="TextAppearance.MaterialComponents.Subtitle2">
+        <item name="android:textColor">@color/colorBlack</item>
         <item name="android:textSize">11sp</item>
     </style>
 
@@ -71,7 +82,7 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="ButtonStyle" parent="Widget.AppCompat.Button.Colored">
+    <style name="DefaultButtonStyle" parent="Widget.AppCompat.Button.Colored">
         <!--<item name="android:stateListAnimator">@animator/button_animator</item>-->
         <!--<item name="android:outlineAmbientShadowColor">@color/colorButton</item>-->
         <!--<item name="android:ambientShadowAlpha">0.039</item>-->
@@ -102,15 +113,8 @@
         <item name="android:focusable">true</item>
     </style>
 
-    <style name="FacebookButton" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:textColor">@color/colorWhiteText</item>
-        <item name="android:background">@color/facebookButton</item>
-        <item name="android:textAllCaps">false</item>
-    </style>
-
-    <style name="TwitterButton" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:textColor">@color/colorWhiteText</item>
-        <item name="android:background">@color/twitterButton</item>
+    <style name="MaterialButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
